playground/notas_tests/invalid/syn-type-missing-colon.hulk
type T { x Number = 0; }
